# pmr-hmc

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
experiments/: baselines.py  benchmark_suite.py  flows.py  make_tables.py  mega30.txt  mega_bench.py  mega_native.py  native.py  panel_bench.py  pdb_bench2.py  pdb_rerun.py  pdb_targets.py  pmr_hmc.py  pmr_kernel.c  run_proper.sh  sbc.py  scaling8.py  sota2_bench.py  sota_bench.py  targets.py  vilya_scale4.py  vilya_whale.py
paper/: REVIEW.md  decomp_full.tex  failure_fig.py  figures.py  fix_flow.py  fix_res.py  fix_two.py  flow_v3.py  main.tex  make_figs.py  make_schematics.py  mega_full.tex  mega_panel.tex  mega_summary.tex  pdb_panel.tex  pdb_top.tex  scaling_fig8.py  tpami_version.tex
results/: MEGA.md  NATIVE.md  PDB2.md  PROPER.md  README.md  SCALING.md  SOTA2.md  SUITE.md
results/raw/: decomp8_shard0.json  decomp8_shard1.json  decomp8_shard10.json  decomp8_shard11.json  decomp8_shard2.json  decomp8_shard3.json  decomp8_shard4.json  decomp8_shard5.json  decomp8_shard6.json  decomp8_shard7.json  decomp8_shard8.json  decomp8_shard9.json  mega_native.json  mega_panel_shard0.json  mega_panel_shard1.json  mega_panel_shard10.json  mega_panel_shard11.json  mega_panel_shard2.json  mega_panel_shard3.json  mega_panel_shard4.json  mega_panel_shard5.json  mega_panel_shard6.json  mega_panel_shard7.json  mega_panel_shard8.json  mega_panel_shard9.json  mega_results_shard0.json  mega_results_shard1.json  mega_results_shard10.json  mega_results_shard11.json  mega_results_shard12.json  (+59 more)
tests/: test_pmrhmc.py
(+5 files in other folders)
